# GENAI_HACKATON

./: README.md  pyproject.toml
app/: .env.example  main.py
app/notebooks/: test_data_evaluation.ipynb
app/services/data_pipeline/: doc_chunking.py  doc_embedding.py  doc_loader.py  vector_db.py
app/services/front_end/: stream_app.py
app/services/front_end/pages/: chatbot_page.py
app/utils/: datamodels.py  helper.py  prompts.py
