[project]
name = "ds-rpc-01"
version = "0.1.0"
description = "Starter project for the RPC-01: Internal Chatbot with Role Based Access Control"
readme = "README.md"
requires-python = "3.11.*"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "streamlit (>=1.45.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "unstructured[all-docs] (>=0.17.2,<0.18.0)",
    "markdown (>=3.8,<4.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "openai (>=1.90.0,<2.0.0)",
    "langchain-openai (>=0.3.25,<0.4.0)",
]
